// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with minimal props 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: Capitalize;
  width: 100%;
  font-size: 1.6rem;
  font-style: 400;
  line-height: 1.2;
  box-shadow: 0px 0.3rem 0.8rem rgba(0,0,0,0.2);
  border-radius: 0.4rem;
  padding: 1.6rem;
  margin-bottom: 1.6rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #0f8a28;
}

.c3 > .sc-AxiKw {
  margin-right: 0.8rem;
}

.c3:focus {
  outline: none;
}

.c3:hover {
  box-shadow: 0px 0.5rem 0.8rem rgba(0,0,0,0.2);
}

.c3:active,
.c3:focus {
  box-shadow: 0px 0.3rem 0.8rem rgba(0,0,0,0.1);
}

.c3:hover {
  background: #0d7522;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  width: 100%;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <span
    class="c2"
    width="100%"
  >
    <button
      class="c3"
      id="test-id"
      type=""
    >
      
    </button>
  </span>
</div>
`;

exports[`Button renders with props 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  pointer-events: none;
  display: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: Capitalize;
  width: 100%;
  font-size: 1.6rem;
  font-style: 400;
  line-height: 1.2;
  box-shadow: 0px 0.3rem 0.8rem rgba(0,0,0,0.2);
  border-radius: 0.4rem;
  padding: 1.6rem;
  margin-bottom: 1.6rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #0f8a28;
}

.c3 > .c4 {
  margin-right: 0.8rem;
}

.c3 > .c4 {
  margin-right: 0;
  margin-left: 0.8rem;
}

.c3:focus {
  outline: none;
}

.c3:hover {
  box-shadow: 0px 0.5rem 0.8rem rgba(0,0,0,0.2);
}

.c3:active,
.c3:focus {
  box-shadow: 0px 0.3rem 0.8rem rgba(0,0,0,0.1);
}

.c3:hover {
  background: #0d7522;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  width: 100%;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <span
    class="c2"
    width="100%"
  >
    <button
      class="c3"
      id="test-id"
      type=""
    >
      <div
        class="c4 c5"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-info-circle fa-w-16 fa-1x "
          data-icon="info-circle"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm0-338c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
          />
        </svg>
      </div>
      test content
    </button>
  </span>
</div>
`;
